@@ -6,6 +6,8 @@
  * This code is covered by the GNU General Public License. For details see the file "COPYING".
  */
 
+#define CP0_COUNT_RATE_FIXED
+
 #include "lib.h"
 #include "cpu.h"
 #include "galileo.h"
