@@ -52,6 +52,8 @@
 #define BRDG_REG_DEV_PARM_NCS2			0x464
 #define BRDG_REG_DEV_PARM_NCS3			0x468
 #define BRDG_REG_DEV_PARM_NCSBOOT		0x46c
+#define BRDG_REG_COUNTER_0					0x850
+#define BRDG_REG_COUNTER_CTRL				0x864
 #define BRDG_REG_TIMEOUT_RETRY			0xc04
 #define BRDG_REG_RAS01_BANK_SIZE			0xc08
 #define BRDG_REG_RAS23_BANK_SIZE			0xc0c
